# cstruct

./: .gitignore  README.md  pyproject.toml
cstruct/: __init__.py  _classwrap.py  _exc.py  _lexer.py  _metadata.py
examples/: elf_header.py  test.elf
