[tool.poetry]
name = "cstruct-deco"
version = "0.1.0"
description = "Read primitive data from a binary stream using a C-like struct format."
authors = ["yntha <bguznvjk@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/yntha/pyleb128"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
