[tool.poetry]
name = "cstruct"
version = "0.2.5"
description = "Read primitive data from a binary stream into a dataclass using a C-like struct format."
authors = ["yntha <bguznvjk@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/yntha/cstruct"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
